netpol-allow-netshoot-to-sampapp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-netshoot-to-sampapp
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: sampapp
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: netshoot
